[package]
name = "rust-any2feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Реализовывать https будет слишком больно. Пока берем блокирующий вариант для простоты
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
# Это попытка реализовать кастомный Jar
cookie_store = { version = "0.16.1" }
cookie_crate = { package = "cookie", version = "0.16.2" }
bytes = {version = "1.4.0"}
# json тоже самостоятельно парсить не будем
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

# Для тестов
rstest = "0.16.0"

