[package]
name = "any2feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_server = { version = "0.1.0", path = "../http_server" }
feed = { version = "0.1.0", path = "../feed" }
mewe_api = { version = "0.1.0", path = "../mewe_api" }

regex = { version = "1.7.1" }
chrono = { version = "0.4.23", features = ["serde"] }
# For config
serde = { version = "1.0.152", features = ["derive"] }
toml = { version = "0.7.2" }

[dev-dependencies]
# Для тестов
serde_json = "1.0.93"
rstest = "0.16.0"

