[package]
name = "any2feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_server = { version = "0.1.0", path = "../http_server" }
feed = { version = "0.1.0", path = "../feed" }
# For feed source
mewe_api = { version = "0.1.0", path = "../mewe_api" }
telegram = { version = "0.1.0", path = "../telegram" }

reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }

regex = { version = "1.7.1" }
chrono = { version = "0.4.23", features = ["serde"] }
# For config
serde = { version = "1.0.152", features = ["derive"] }
toml = { version = "0.7.2" }
# Cli
clap = { version = "4.1.8", features = ["derive"] }
# Logging
log = "0.4.17"
simplelog = "0.12.1"

[dev-dependencies]
test_utils = { version = "0.1.0", path = "../test_utils" }
# Для тестов
serde_json = "1.0.93"
rstest = "0.16.0"
