[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For parsing html
scraper = "0.14.0"
openssl = { version = "0.10.45", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
regex = { version = "1.7.1" }
log = "0.4.17"

[dev-dependencies]
test_utils = { version = "0.1.0", path = "../test_utils" }
rstest = "0.16.0"
